# SoLong

./: .gitignore  pyproject.toml
solution/: rosettaStone.org  rosettaStone.tex  rosettaStone.tex~  sol.py  univSol.org
solution/scripts/: cropImages.py  dataFrameTest.py  killWatermark.py  trainDistribution.py
