[tool.poetry]
name = "ictAI"
version = "0.1.0"
description = "Random code for ict-iitk AI summer classes"
authors = ["Rohit Goswami"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
seaborn = "^0.9.0"
pandas = "^0.24.2"
matplotlib = "^3.1"
numpy = "^1.16"
scipy = "^1.3"
sklearn = "^0.0.0"
ipython = "^7.5"
pycairo = "^1.18"
pyqt5 = "^5.12"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
openpyxl = "^2.6"
xlrd = "^1.2"
keras = "^2.2"
tensorflow = "^1.13"
pyreadline = "^2.1"
tsne = "^0.1.8"
pydot = "^1.4"
wandb = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
